0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_efa_keller_massart.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_efa_keller_massart.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa_keller_massart.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa_keller_massart.py:


EFA (Keller and Massart original example)
=========================================

In this example, we perform the Evolving Factor Analysis of a TEST dataset
(ref. Keller and Massart, Chemometrics and Intelligent Laboratory Systems,
12 (1992) 209-224 )

.. GENERATED FROM PYTHON SOURCE LINES 18-23

.. code-block:: default

    import numpy as np

    import spectrochempy as scp









.. GENERATED FROM PYTHON SOURCE LINES 25-29

Generate a test dataset
-----------------------
1) simulated chromatogram
*************************

.. GENERATED FROM PYTHON SOURCE LINES 29-39

.. code-block:: default


    t = scp.Coord.arange(15, units="minutes", title="time")  # time coordinates
    c = scp.Coord(range(2), title="components")  # component coordinates

    dsc = scp.zeros((2, 15), dtype=np.float64, coords=[c, t])
    dsc[0, 3:8] = [1, 3, 6, 3, 1]  # compound 1
    dsc[1, 5:11] = [1, 3, 5, 3, 1, 0.5]  # compound 2

    _ = dsc.plot(title="concentration")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_001.png
   :alt: concentration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 40-42

2) absorption spectra
**********************

.. GENERATED FROM PYTHON SOURCE LINES 42-49

.. code-block:: default


    spec = np.array([[2.0, 3.0, 4.0, 2.0], [3.0, 4.0, 2.0, 1.0]])
    w = scp.Coord.arange(1, 5, 1, units="nm", title="wavelength")

    dss = scp.NDDataset(data=spec, coords=[c, w])
    _ = dss.plot(title="spectra")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_002.png
   :alt: spectra
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 50-52

3) simulated data matrix
************************

.. GENERATED FROM PYTHON SOURCE LINES 52-59

.. code-block:: default


    dataset = scp.dot(dsc.T, dss)
    dataset += scp.normal(scale=0.1, size=dataset.shape)
    dataset.title = "intensity"

    _ = dataset.plot(title="calculated dataset")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_003.png
   :alt: calculated dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 60-62

4) evolving factor analysis (EFA)
*********************************

.. GENERATED FROM PYTHON SOURCE LINES 62-65

.. code-block:: default

    efa = scp.EFA()
    _ = efa.fit(dataset)








.. GENERATED FROM PYTHON SOURCE LINES 66-68

Plots of the log(EV) for the forward and backward analysis


.. GENERATED FROM PYTHON SOURCE LINES 68-70

.. code-block:: default

    _ = efa.f_ev.T.plot(yscale="log", legend=efa.f_ev.k.labels)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_004.png
   :alt: plot efa keller massart
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 71-73

.. code-block:: default

    _ = efa.b_ev.T.plot(yscale="log", legend=efa.b_ev.k.labels)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_005.png
   :alt: plot efa keller massart
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 74-79

Looking at these EFA curves, it is quite obvious that only two components
are really significant, and this corresponds to the data that we have in
input.
We can consider that the third EFA components is mainly due to the noise,
and so we can use it to set a cut of values

.. GENERATED FROM PYTHON SOURCE LINES 79-85

.. code-block:: default

    n_pc = efa.n_components = 2

    efa.cutoff = efa.f_ev[:, n_pc].max()
    f2 = efa.f_ev[:, :n_pc]
    b2 = efa.b_ev[:, :n_pc]








.. GENERATED FROM PYTHON SOURCE LINES 86-88

plot forward and backward EFA curves together without concatenating datasets,
which would emit a coordinate warning here.

.. GENERATED FROM PYTHON SOURCE LINES 88-91

.. code-block:: default

    _ = f2.T.plot(yscale="log")
    _ = b2.T.plot(yscale="log", clear=False)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_006.png
   :alt: plot efa keller massart
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 92-94

Get the abstract concentration profile based on the FIFO EFA analysis


.. GENERATED FROM PYTHON SOURCE LINES 94-97

.. code-block:: default

    C = efa.transform()
    _ = C.T.plot(title="EFA concentration")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_007.png
   :alt: EFA concentration
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_efa_keller_massart_007.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 98-100

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 100-102

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.366 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa_keller_massart.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_efa_keller_massart.py <plot_efa_keller_massart.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_efa_keller_massart.ipynb <plot_efa_keller_massart.ipynb>`
